feat: add font & font css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
     <title data-i18n="title">Home</title>
 </head>
 <body data-page="home">
-    <a href="./pages/authorization/authorization.html">авторизация</a>
+    это главная
+    <a class="text-medium-30-l5" href="./pages/authorization/authorization.html">авторизация</a>
 </body>
 </html>
