--- a/pages/authorization/authorization.html
+++ b/pages/authorization/authorization.html
@@ -6,6 +6,15 @@
     <title data-i18n="title">Authorization</title>
 </head>
 <body data-page="authorization">
+    <header>
+        
+    </header>
+    <main>
+        это авторизация
+    </main>
+    <footer>
+
+    </footer>
     <a href="/index.html">главная</a>
 </body>
 </html>
