feat: add header & add more font

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <title data-i18n="title">Home</title>
 </head>
 <body data-page="home">
-    это главная
-    <a class="text-medium-30-l5" href="./pages/authorization/authorization.html">авторизация</a>
+    <header>
+        <nav>
+            <button class="half" data-i18n-common="header.button">
+                <p class="text-medium-30" >Our services</p>
+                <span></span>
+            </button>
+            <a href="" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
+            <a href="" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
+            <a href="" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
+            <a href="" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+            <a href="" class="text-medium-30" data-i18n-common="header.menu.setting">Setting</a>
+            <a href="" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
+        </nav> 
+        <div class="burger-menu">
+            <div></div><div></div><div></div>
+        </div>     
+    </header>
+    <main>
+        это главная
+        <a href="./pages/authorization/authorization.html">авторизая</a>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
