--- a/pages/authorization/authorization.html
+++ b/pages/authorization/authorization.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/main.css">
     <title data-i18n="title">Authorization</title>
 </head>
 <body data-page="authorization">
@@ -11,10 +12,10 @@
     </header>
     <main>
         это авторизация
+        <a href="/index.html">главная</a>
     </main>
     <footer>
 
     </footer>
-    <a href="/index.html">главная</a>
 </body>
 </html>
