feat: add section preview

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./index.css">
     <title data-i18n="title">Home</title>
 </head>
 <body data-page="home">
@@ -25,6 +26,21 @@
         </div>     
     </header>
     <main>
+        <section class="preview">
+            <img src="./assets/images/car.svg" alt="">
+            <p class="text-bold-150" data-i18n="prev.up">CAR MUSC</p>
+            <div class="separators">
+                <span class="separator"></span>
+                <span class="separator"></span>
+                <span class="separator"></span>
+                <span class="separator"></span>
+            </div>
+            <p class="text-medium-36" data-i18n="prev.down">Car detailing: perfect cleanliness and body protection. Trust us to take care of your car!</p>
+            <button class="half" data-i18n-common="header.button">
+                <p class="text-medium-30-l5" data-i18n="prev.button">OUR SERVICE</p>
+                <span></span>
+            </button>
+        </section>
         это главная
         <a href="./pages/authorization/authorization.html">авторизая</a>
     </main>
