feat: add section steps

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body data-page="home">
     <header>
         <nav>
-            <button class="half" data-i18n-common="header.button">
+            <a href="" class="half" data-i18n-common="header.a">
                 <p class="text-medium-30" >Our services</p>
                 <span></span>
-            </button>
+            </a>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.setting">Setting</a>
+            <button class="text-medium-30" data-i18n-common="header.menu.setting">Setting</button>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
         </nav> 
         <div class="burger-menu">
@@ -36,16 +36,33 @@
                 <span class="separator"></span>
             </div>
             <p class="text-medium-36" data-i18n="prev.down">Car detailing: perfect cleanliness and body protection. Trust us to take care of your car!</p>
-            <button class="half" data-i18n-common="header.button">
+            <a href="" class="half" data-i18n-common="header.button">
                 <p class="text-medium-30-l5" data-i18n="prev.button">OUR SERVICE</p>
                 <span></span>
-            </button>
+            </a>
         </section>
+        <section class="steps">
+            <div class="steps-text">
+                <p class="text-demi-s50-h70-l5">from the Russian Cup<br>to the World Championships</p>
+                <div class="separators">
+                    <span class="separator"></span>
+                    <span class="separator"></span>
+                    <span class="separator"></span>
+                    <span class="separator"></span>
+                </div>
+                <p class="text-medium-36">We are proud to have achieved significant success in the world of car detailing. Here are five key achievements that highlight our expertise and dedication</p>
+            </div>
+            <div class="steps-box">
+                <div class="paggination"></div>
+            </div>
+        </section>
+        
         это главная
         <a href="./pages/authorization/authorization.html">авторизая</a>
     </main>
     <footer>
 
     </footer>
+    <script type="module" src="./js/home/main.js"></script>
 </body>
 </html>
