refactor: remove individual components and move css files

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                 <div class="paggination"></div>
             </div>
         </section>
-        
+        <section class="gallery">
+            
+        </section>
         это главная
         <a href="./pages/authorization/authorization.html">авторизая</a>
     </main>
