feat: add section gallery

--- a/index.html
+++ b/index.html
@@ -57,8 +57,15 @@
             </div>
         </section>
         <section class="gallery">
-            
+            <div class="slider left">
+                <img src="./assets/icons/arrow.svg" alt="">
+            </div>
+            <div class="gallery-container"></div>
+            <div class="slider right">
+                <img src="./assets/icons/arrow.svg" alt="">
+            </div>
         </section>
+        
         это главная
         <a href="./pages/authorization/authorization.html">авторизая</a>
     </main>
