feat: add part section services & add script for fill separators

--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
         <section class="preview">
             <img src="./assets/images/car.svg" alt="">
             <p class="text-bold-150" data-i18n="prev.up">CAR MUSC</p>
-            <div class="separators">
-                <span class="separator"></span>
-                <span class="separator"></span>
-                <span class="separator"></span>
-                <span class="separator"></span>
-            </div>
+            <div class="separators"></div>
             <p class="text-medium-36" data-i18n="prev.down">Car detailing: perfect cleanliness and body protection. Trust us to take care of your car!</p>
             <a href="" class="half" data-i18n-common="header.button">
                 <p class="text-medium-30-l5" data-i18n="prev.button">OUR SERVICE</p>
@@ -44,12 +39,7 @@
         <section class="steps">
             <div class="steps-text">
                 <p class="text-demi-s50-h70-l5">from the Russian Cup<br>to the World Championships</p>
-                <div class="separators">
-                    <span class="separator"></span>
-                    <span class="separator"></span>
-                    <span class="separator"></span>
-                    <span class="separator"></span>
-                </div>
+                <div class="separators"></div>
                 <p class="text-medium-36">We are proud to have achieved significant success in the world of car detailing. Here are five key achievements that highlight our expertise and dedication</p>
             </div>
             <div class="steps-box">
@@ -65,7 +55,15 @@
                 <img src="./assets/icons/arrow.svg" alt="">
             </div>
         </section>
-        
+        <section class="services">
+            <div class="services-text">
+                <p class="text-demi-52-l5">our services</p>
+
+            </div>
+            <div class="serivces-container">
+
+            </div>
+        </section>
         это главная
         <a href="./pages/authorization/authorization.html">авторизая</a>
     </main>
@@ -73,5 +71,6 @@
 
     </footer>
     <script type="module" src="./js/home/main.js"></script>
+    <script src="./js/separators.js"></script>
 </body>
 </html>
