--- a/index.html
+++ b/index.html
@@ -56,12 +56,23 @@
             </div>
         </section>
         <section class="services">
-            <div class="services-text">
+            <div class="text-section services-text">
                 <p class="text-demi-52-l5">our services</p>
-
+                <div class="separators"></div>
+                <div class="services-filter">
+                    <button class="text-demi-32-l5" data-target="pasting">pasting</button>
+                    <button class="text-demi-32-l5" data-target="detailing">detailing</button>
+                    <div class="filter-background"></div>
+                </div>
             </div>
-            <div class="serivces-container">
-
+            <div class="services-box">
+                <div class="slider left">
+                    <img src="./assets/icons/arrow.svg" alt="">
+                </div>
+                <div class="services-container"></div>
+                <div class="slider right">
+                    <img src="./assets/icons/arrow.svg" alt="">
+                </div>
             </div>
         </section>
         это главная
