feat: add section services

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <div class="slider right">
                     <img src="./assets/icons/arrow.svg" alt="">
                 </div>
+                <div class="paggination"></div>
             </div>
         </section>
         это главная
