feat: add footer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </section>
         <section class="services">
-            <div class="text-section services-text">
+            <div class="text-section">
                 <p class="text-demi-52-l5">our services</p>
                 <div class="separators"></div>
                 <div class="services-filter">
@@ -76,11 +76,52 @@
                 <div class="paggination"></div>
             </div>
         </section>
-        это главная
-        <a href="./pages/authorization/authorization.html">авторизая</a>
+        <section class="our-work">
+            <div class="text-section">
+                <p class="text-demi-52-l5">our work</p>
+                <div class="separators"></div>
+            </div>
+            <div class="our-work-box">
+                <img src="./assets/images/work1.svg" alt="">
+                <img src="./assets/images/work2.svg" alt="">
+                <img src="./assets/images/work3.svg" alt="">
+                <img src="./assets/images/work4.svg" alt="">
+                <img src="./assets/images/work5.svg" alt="">
+                <img src="./assets/images/work6.svg" alt="">
+                <img src="./assets/images/work7.svg" alt="">
+                <img src="./assets/images/work8.svg" alt="">
+            </div>
+        </section>
+        <section class="question">
+            <div class="text-section">
+                <p class="text-demi-52-l5">we will answer any question</p>
+                <div class="separators"></div>
+            </div>
+            <div class="question-box">
+                <div>
+                    <input type="text">
+                    <input type="text">
+                </div>
+                <div>
+
+                </div>
+            </div>
+        </section>
+        <!-- это главная
+        <a href="./pages/authorization/authorization.html">авторизая</a> -->
     </main>
     <footer>
-
+        <p class="text-demi-s16-h24-l5">2025 © Detailing Workshop. All rights reserved.</p>
+        <div class="nav">
+            <a href="" class="half" data-i18n-common="">
+                <p class="text-medium-30" >Our services</p>
+                <span></span>
+            </a>
+            <a href="" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
+            <a href="" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
+            <a href="" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
+            <a href="" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+        </div>
     </footer>
     <script type="module" src="./js/home/main.js"></script>
     <script src="./js/separators.js"></script>
