feat: add section question without adaptive

--- a/index.html
+++ b/index.html
@@ -99,11 +99,40 @@
             </div>
             <div class="question-box">
                 <div>
-                    <input type="text">
-                    <input type="text">
+                    <input type="text" placeholder="name">
+                    <input type="text" placeholder="phone">
                 </div>
                 <div>
-
+                    <textarea class="question-box-message" placeholder="Question about design, tuning, etc."></textarea>    
+                    <div class="question-social">
+                        <a href="" class="icon-container">
+                            <img src="./assets/icons/telegram.svg" alt="">
+                        </a>
+                        <a href="" class="icon-container">
+                            <img src="./assets/icons/youtube.svg" alt="">
+                        </a>
+                        <a href="" class="icon-container">
+                            <img src="./assets/icons/vk.svg" alt="">
+                        </a>
+                    </div>
+                    <button class="half">
+                        <p class="text-medium-30-l5" data-i18n="prev.button">SEND</p>
+                        <span></span>
+                    </button>
+                    <div class="question-contact">
+                        <span>
+                            <img src="./assets/icons/place.svg" alt="">
+                            <p class="text-demi-s16-l5">1 Lenin Street, Minsk, Belarus, 220030</p>
+                        </span>
+                        <span>
+                            <img src="./assets/icons/phone.svg" alt="">
+                            <p class="text-demi-s16-l5">+375 (33) 251-66-14</p>
+                        </span>
+                        <span>
+                            <img src="./assets/icons/pochta.svg" alt="">
+                            <p class="text-demi-s16-l5">carmusc@carmusc.ru</p>
+                        </span>
+                    </div>
                 </div>
             </div>
         </section>
