feat: add base structure fot gallery page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <span></span>
             </a>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
+            <a href="./pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
             <button class="text-medium-30" data-i18n-common="header.menu.setting">Setting</button>
