feat: add section gallery (but need change & add photo)

--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -26,7 +26,20 @@
         </div>     
     </header>
     <main>
-        sdf
+        <section class="gallery">
+            <div>
+                <img src="../../assets/images/gallery11.svg" alt="">
+                <img src="../../assets/images/gc2.svg" alt="">
+                <img src="../../assets/images/gallery12.svg" alt="">
+                <img src="../../assets/images/gc4.svg" alt="">
+            </div>
+            <div>
+                <img src="../../assets/images/tempgallery111.svg" alt="">
+                <img src="../../assets/images/gallery22.svg" alt="">
+                <img src="../../assets/images/gc3.svg" alt="">
+                <img src="../../assets/images/gallery21.svg" alt="">
+            </div>
+        </section>
     </main>
     <footer>
         <p class="text-demi-s16-h24-l5">2025 © Detailing Workshop. All rights reserved.</p>
@@ -41,6 +54,7 @@
             <a href="" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
         </div>
     </footer>
-    <script src="./js/separators.js"></script>
+    <script src="../../js/gallery/scrollGallery.js"></script>
+    <script src="../../js/separators.js"></script>
 </body>
 </html>
