--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title data-i18n="title">Home</title>
 </head>
 <body data-page="home">
+    <div id="preloader">
+        <div class="loader"></div>
+    </div>
     <header>
         <nav>
             <a href="" class="half" data-i18n-common="header.a">
@@ -152,6 +155,7 @@
             <a href="" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
         </div>
     </footer>
+    <script src="./js/preloader.js"></script>
     <script type="module" src="./js/home/main.js"></script>
     <script src="./js/separators.js"></script>
 </body>
