feat: add section our work

--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -27,11 +27,39 @@
     </header>
     <main>
         <section class="gallery">
-            <div>
-                
+            <div></div>
+            <div></div>
+        </section>
+        <section class="feedback">
+            <div class="text-section">
+                <p class="text-demi-52-l5">feedback from our customers</p>
+                <div class="separators"></div>
             </div>
-            <div>
-                
+            <div class="feedback-box">
+                <div class="slider left">
+                    <img src="../../assets/icons/arrow.svg" alt="">
+                </div>
+                <div class="feedback-container"></div>
+                <div class="slider right">
+                    <img src="../../assets/icons/arrow.svg" alt="">
+                </div>
+                <div class="paggination"></div>
+            </div>
+        </section>
+        <section class="our-work">
+            <div class="text-section">
+                <p class="text-demi-52-l5">our work</p>
+                <div class="separators"></div>
+            </div>
+            <div class="our-work-box">
+                <img src="../../assets/images/work1.svg" alt="">
+                <img src="../../assets/images/work2.svg" alt="">
+                <img src="../../assets/images/work3.svg" alt="">
+                <img src="../../assets/images/work4.svg" alt="">
+                <img src="../../assets/images/work5.svg" alt="">
+                <img src="../../assets/images/work6.svg" alt="">
+                <img src="../../assets/images/work7.svg" alt="">
+                <img src="../../assets/images/work8.svg" alt="">
             </div>
         </section>
     </main>
