feat: add adaptive for last section (without select)

--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -62,6 +62,37 @@
                 <img src="../../assets/images/work8.svg" alt="">
             </div>
         </section>
+        <section class="request-service">
+            <div class="request-service-text">
+                <p class="text-demi-s50-h70-l5">Do you want the same result? Submit a request!</p>
+                <div class="separators"></div>
+                <p class="text-medium-36">This is just a part of our work. Do you like what you see? Leave a request and we will find a solution just for you!</p>
+            </div>
+            <div class="request-service-box">
+                <div class="request-service-box-service">
+                    <p class="text-demi-s16-l5">choose a service</p>
+                    <div class="future-select"></div> 
+                </div>
+                <textarea class="question-box-message" placeholder="Question about design, tuning, etc."></textarea>    
+                <div class="request-service-box-buttons"> 
+                    <button class="half">
+                        <p class="text-medium-30-l5" data-i18n="prev.button">SEND</p>
+                        <span></span>
+                    </button>
+                    <div class="question-social">
+                        <a href="" class="icon-container">
+                            <img src="../../assets/icons/telegram.svg" alt="">
+                        </a>
+                        <a href="" class="icon-container">
+                            <img src="../../assets/icons/youtube.svg" alt="">
+                        </a>
+                        <a href="" class="icon-container">
+                            <img src="../../assets/icons/vk.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <p class="text-demi-s16-h24-l5">2025 © Detailing Workshop. All rights reserved.</p>
