--- a/pages/gallery/gallery.html
+++ b/pages/gallery/gallery.html
@@ -16,7 +16,7 @@
             </a>
             <a href= "/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
+            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
             <button class="text-medium-30" data-i18n-common="header.menu.setting">Setting</button>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
