feat: add section map

--- a/pages/contacts/contacts.html
+++ b/pages/contacts/contacts.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./contacts.css">
     <title>Contact</title>
 </head>
-<body>
+<body data-page="contact">
     <header>
         <nav>
             <a href="" class="half" data-i18n-common="header.a">
@@ -26,7 +26,20 @@
         </div>     
     </header>
     <main>
-        contact
+        <section class="map">
+            <div class="map-text">
+                <p class="text-demi-s50-h70-l5">Professional car detailing and wrapping</p>
+                <div class="separators"></div>
+                <p class="text-medium-36">We are a team of professionals who turn your car into an ideal. We specialize in high-quality detailing and premium decal, using only proven materials and technologies</p>
+            </div>
+            <div class="map-container" style="position:relative;overflow:hidden;">
+                <a href="https://yandex.by/maps/157/minsk/house/Zk4YcwFhTUYBQFtpfXR4eXtrZg==/?ll=27.561610%2C53.898636&utm_medium=mapframe&utm_source=maps&z=15.2" style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Ленина, 15 — Яндекс Карты</a>
+                <iframe src="https://yandex.by/map-widget/v1/?ll=27.561610%2C53.898636&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg2NjY4MjM4MRI70JHQtdC70LDRgNGD0YHRjCwg0JzRltC90YHQuiwg0LLRg9C70ZbRhtCwINCb0LXQvdGW0L3QsCwgMTUiCg3SfdxBFVqYV0I%2C&z=15.2" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+            </div>
+        </section>
+        <section class="contact">
+
+        </section>
         <section class="question">
             <div class="text-section">
                 <p class="text-demi-52-l5">we will answer any question</p>
