feat: add section contact

--- a/pages/contacts/contacts.html
+++ b/pages/contacts/contacts.html
@@ -38,8 +38,19 @@
             </div>
         </section>
         <section class="contact">
-
-        </section>
+            <div class="contact-item">
+                <p class="text-demi-30-l5">address</p>
+                <p class="text-demi-s24-h30-l5">ул. Ленина, 15, Минск, 220030,<br>Беларусь</p>
+            </div>
+            <div class="contact-item">
+                <p class="text-demi-30-l5">telephone</p>
+                <p class="text-demi-s24-h30-l5">+375 (33) 666-43-43<br>+375 (29) 666-43-43</p>
+            </div>
+            <div class="contact-item">
+                <p class="text-demi-30-l5">Working hours</p>
+                <p class="text-demi-s24-h30-l5">mn - fr : 07:00 - 23:00<br>st - sn : 08:00 - 22:00</p>
+            </div>
+        </section>  
         <section class="question">
             <div class="text-section">
                 <p class="text-demi-52-l5">we will answer any question</p>
