feat: add page FAQ

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
             <a href="./pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
             <a href="./pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+            <a href="./pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
             <button class="text-medium-30" data-i18n-common="header.menu.setting">Setting</button>
             <a href="" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
         </nav> 
