--- a/pages/FAQ/FAQ.html
+++ b/pages/FAQ/FAQ.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="./contacts.css">
+    <link rel="stylesheet" href="./FAQ.css">
     <title>FAQ</title>
 </head>
 <body data-page="FAQ">
@@ -26,6 +26,14 @@
         </div>     
     </header>
     <main>
+        <section class="answer">
+            <div class="text-section">
+                <p class="text-demi-52-l5">Frequently Asked Questions</p>
+                <div class="separators"></div>
+            </div>
+            <div class="answer-box"></div>
+            <div class="number-paggination"></div>
+        </section>
         <section class="question">
             <div class="text-section">
                 <p class="text-demi-52-l5">we will answer any question</p>
@@ -84,7 +92,7 @@
             <a href="" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
         </div>
     </footer>
-    <script type="module" src="../../js/contacts/main.js"></script>
+    <script type="module" src="../../js/FAQ/main.js"></script>
     <script src="../../js/separators.js"></script>
 </body>
 </html>
