--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <header>
         <nav>
-            <a href="" class="half" data-i18n-common="header.a">
+            <a href="./pages/services/services.html" class="half" data-i18n-common="header.a">
                 <p class="text-medium-30" >Our services</p>
                 <span></span>
             </a>
