feat: add logic of filters

--- a/pages/services/services.html
+++ b/pages/services/services.html
@@ -26,6 +26,55 @@
         </div>     
     </header>
     <main>
+        <section class="services">
+            <div class="text-section">
+                <p class="text-demi-52-l5">our services</p>
+                <div class="separators"></div>
+                <div class="services-filter">
+                    <button class="text-demi-32-l5" data-target="pasting">pasting</button>
+                    <button class="text-demi-32-l5" data-target="detailing">detailing</button>
+                    <div class="filter-background"></div>
+                </div>
+            </div>
+            <div class="filter-section">
+                <div class="filter-box">
+                    <p class="text-demi-s14-l5">search</p>
+                    <div class="custom-input">
+                        <img src="../../assets/icons/search.svg" alt="">
+                        <input type="text" placeholder="search">
+                        <button id="clear-button" type="button">
+                            <img src="../../assets/icons/close.svg" alt="Очистить">
+                        </button>
+                    </div>
+                </div>
+                
+                <div class="filter-box">
+                    <p class="text-demi-s14-l5">filter</p>
+                    <div class="select">
+                        <p class="text-demi-s16-l5">filter</p>
+                        <img src="../../assets/icons/arrow.svg" alt="">
+                        <div class="select-option">
+                            <p>1</p>
+                            <p>2</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="filter-box">
+                    <p class="text-demi-s14-l5">sort</p>
+                    <div class="select">
+                        <p class="text-demi-s16-l5">sort</p>
+                        <img src="../../assets/icons/arrow.svg" alt="">
+                        <div class="select-option">
+                            <p>1</p>
+                            <p>2</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="services-box">
+
+            </div>
+        </section>
         <section class="question">
             <div class="text-section">
                 <p class="text-demi-52-l5">we will answer any question</p>
