feat: add container service (test)

--- a/pages/services/services.html
+++ b/pages/services/services.html
@@ -47,7 +47,6 @@
                         </button>
                     </div>
                 </div>
-                
                 <div class="filter-box">
                     <p class="text-demi-s14-l5">filter</p>
                     <div class="select">
@@ -72,7 +71,16 @@
                 </div>
             </div>
             <div class="services-box">
-
+                <div class="container-service">
+                        <img src="../../assets/icons/cleaning.svg" alt="">
+                        <p class="text-demi-24-l5 name-service">body painting</p>
+                        <p class="text-demi-24-l5 price">~15$</p>
+                        <button class="half">
+                            <p class="text-medium-30-l5">Order</p>
+                            <span></span>
+                        </button>
+                        <p class="text-demi-s16-h24-l5 description">Using only high-quality paints and modern technologies, we guarantee perfect coverage, resistance to fading, and durability.</p>
+                </div>
             </div>
         </section>
         <section class="question">
