feat: add section services with filter&sort&search

--- a/pages/services/services.html
+++ b/pages/services/services.html
@@ -49,39 +49,22 @@
                 </div>
                 <div class="filter-box">
                     <p class="text-demi-s14-l5">filter</p>
-                    <div class="select">
-                        <p class="text-demi-s16-l5">filter</p>
+                    <div class="select" id="filter">
+                        <p class="text-demi-s16-l5 option-select">filter</p>
                         <img src="../../assets/icons/arrow.svg" alt="">
-                        <div class="select-option">
-                            <p>1</p>
-                            <p>2</p>
-                        </div>
+                        <div class="select-option"></div>
                     </div>
                 </div>
                 <div class="filter-box">
                     <p class="text-demi-s14-l5">sort</p>
-                    <div class="select">
-                        <p class="text-demi-s16-l5">sort</p>
+                    <div class="select" id="sort">
+                        <p class="text-demi-s16-l5 option-select">sort</p>
                         <img src="../../assets/icons/arrow.svg" alt="">
-                        <div class="select-option">
-                            <p>1</p>
-                            <p>2</p>
-                        </div>
+                        <div class="select-option"></div>
                     </div>
                 </div>
             </div>
-            <div class="services-box">
-                <div class="container-service">
-                        <img src="../../assets/icons/cleaning.svg" alt="">
-                        <p class="text-demi-24-l5 name-service">body painting</p>
-                        <p class="text-demi-24-l5 price">~15$</p>
-                        <button class="half">
-                            <p class="text-medium-30-l5">Order</p>
-                            <span></span>
-                        </button>
-                        <p class="text-demi-s16-h24-l5 description">Using only high-quality paints and modern technologies, we guarantee perfect coverage, resistance to fading, and durability.</p>
-                </div>
-            </div>
+            <div class="services-box"></div>
         </section>
         <section class="question">
             <div class="text-section">
