--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="./pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
             <a href="./pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
             <button class="text-medium-30" data-i18n-common="header.menu.setting">Setting</button>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
+            <a href="./pages/profile/profile.html" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
         </nav> 
         <div class="burger-menu">
             <div></div><div></div><div></div>
