--- a/pages/services/services.html
+++ b/pages/services/services.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/main.css">
     <link rel="stylesheet" href="./services.css">
-    <title>FAQ</title>
+    <title>services</title>
 </head>
 <body data-page="services">
     <header>
