--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -11,16 +11,16 @@
 <body data-page="profile">
     <header>
         <nav>
-            <a href="" class="half" data-i18n-common="header.a">
+            <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
                 <p class="text-medium-30" >Our services</p>
                 <span></span>
             </a>
             <a href= "/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
+            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
+            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
             <button class="text-medium-30" data-i18n-common="header.menu.setting">Setting</button>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
+            <a href="/pages/profile/profile.html" class="text-medium-30" data-i18n-common="header.menu.profile">Profile</a>
         </nav> 
         <div class="burger-menu">
             <div></div><div></div><div></div>
@@ -179,14 +179,14 @@
     <footer>
         <p class="text-demi-s16-h24-l5">2025 © Detailing Workshop. All rights reserved.</p>
         <div class="nav">
-            <a href="" class="half" data-i18n-common="">
+            <a href="/pages/services/services.html" class="half" data-i18n-common="header.a">
                 <p class="text-medium-30" >Our services</p>
                 <span></span>
             </a>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
-            <a href="" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
+            <a href="/index.html" class="text-medium-30" data-i18n-common="header.menu.home">Home</a>
+            <a href="/pages/gallery/gallery.html" class="text-medium-30" data-i18n-common="header.menu.gallery">Gallery of works</a>
+            <a href="/pages/contacts/contacts.html" class="text-medium-30" data-i18n-common="header.menu.contacts">Contacts</a>
+            <a href="/pages/FAQ/FAQ.html" class="text-medium-30" data-i18n-common="header.menu.FAQ">FAQ</a>
         </div>
     </footer>
     <script type="module" src="../../js/profile/main.js"></script>
